// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props iconType 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left"
        data-test-subj="homeSynopsisLinktutorial"
      >
        <div
          class="euiCard__main emotion-euiCard__main-horizontal"
        >
          <div
            class="euiCard__top emotion-euiCard__top-horizontal"
          >
            <span
              class="euiCard__icon emotion-euiCard__icon-horizontal"
              color="text"
              data-euiicon-type="logoApache"
              title=""
            />
          </div>
          <div
            class="euiCard__content emotion-euiCard__content-horizontal"
          >
            <h3
              class="euiTitle euiCard__title emotion-euiTitle-xs"
              id="generated-idTitle"
            >
              <a
                aria-describedby="generated-idDescription"
                class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
                href="link_to_item"
                rel="noreferrer"
              >
                Great tutorial
              </a>
            </h3>
            <div
              class="euiText emotion-euiText-s-euiCard__description"
              id="generated-idDescription"
            >
              <p>
                this is a great tutorial about...
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left"
      data-test-subj="homeSynopsisLinktutorial"
    >
      <div
        class="euiCard__main emotion-euiCard__main-horizontal"
      >
        <div
          class="euiCard__top emotion-euiCard__top-horizontal"
        >
          <span
            class="euiCard__icon emotion-euiCard__icon-horizontal"
            color="text"
            data-euiicon-type="logoApache"
            title=""
          />
        </div>
        <div
          class="euiCard__content emotion-euiCard__content-horizontal"
        >
          <h3
            class="euiTitle euiCard__title emotion-euiTitle-xs"
            id="generated-idTitle"
          >
            <a
              aria-describedby="generated-idDescription"
              class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
              href="link_to_item"
              rel="noreferrer"
            >
              Great tutorial
            </a>
          </h3>
          <div
            class="euiText emotion-euiText-s-euiCard__description"
            id="generated-idDescription"
          >
            <p>
              this is a great tutorial about...
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props iconUrl 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left"
        data-test-subj="homeSynopsisLinktutorial"
      >
        <div
          class="euiCard__main emotion-euiCard__main-horizontal"
        >
          <div
            class="euiCard__top emotion-euiCard__top-horizontal"
          >
            <img
              alt=""
              class="synopsisIcon euiCard__icon emotion-euiCard__icon-horizontal"
              src="icon_url"
            />
          </div>
          <div
            class="euiCard__content emotion-euiCard__content-horizontal"
          >
            <h3
              class="euiTitle euiCard__title emotion-euiTitle-xs"
              id="generated-idTitle"
            >
              <a
                aria-describedby="generated-idDescription"
                class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
                href="link_to_item"
                rel="noreferrer"
              >
                Great tutorial
              </a>
            </h3>
            <div
              class="euiText emotion-euiText-s-euiCard__description"
              id="generated-idDescription"
            >
              <p>
                this is a great tutorial about...
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left"
      data-test-subj="homeSynopsisLinktutorial"
    >
      <div
        class="euiCard__main emotion-euiCard__main-horizontal"
      >
        <div
          class="euiCard__top emotion-euiCard__top-horizontal"
        >
          <img
            alt=""
            class="synopsisIcon euiCard__icon emotion-euiCard__icon-horizontal"
            src="icon_url"
          />
        </div>
        <div
          class="euiCard__content emotion-euiCard__content-horizontal"
        >
          <h3
            class="euiTitle euiCard__title emotion-euiTitle-xs"
            id="generated-idTitle"
          >
            <a
              aria-describedby="generated-idDescription"
              class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
              href="link_to_item"
              rel="noreferrer"
            >
              Great tutorial
            </a>
          </h3>
          <div
            class="euiText emotion-euiText-s-euiCard__description"
            id="generated-idDescription"
          >
            <p>
              this is a great tutorial about...
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`props isBeta 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left-hasBetaBadge"
        data-test-subj="homeSynopsisLinktutorial"
      >
        <div
          class="euiCard__main emotion-euiCard__main-horizontal"
        >
          <div
            class="euiCard__content emotion-euiCard__content-horizontal"
          >
            <h3
              class="euiTitle euiCard__title emotion-euiTitle-xs"
              id="generated-idTitle"
            >
              <a
                aria-describedby="generated-idDescription"
                class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
                href="link_to_item"
                rel="noreferrer"
              >
                Great tutorial
              </a>
            </h3>
            <div
              class="euiText emotion-euiText-s-euiCard__description"
              id="generated-idDescription"
            >
              <p>
                this is a great tutorial about...
              </p>
            </div>
          </div>
          <span
            class="emotion-euiCard__betaBadgeAnchor"
          >
            <span
              class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline-euiCard__betaBadge"
              id="generated-idBetaBadge"
              title="Beta"
            >
              Beta
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left-hasBetaBadge"
      data-test-subj="homeSynopsisLinktutorial"
    >
      <div
        class="euiCard__main emotion-euiCard__main-horizontal"
      >
        <div
          class="euiCard__content emotion-euiCard__content-horizontal"
        >
          <h3
            class="euiTitle euiCard__title emotion-euiTitle-xs"
            id="generated-idTitle"
          >
            <a
              aria-describedby="generated-idDescription"
              class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
              href="link_to_item"
              rel="noreferrer"
            >
              Great tutorial
            </a>
          </h3>
          <div
            class="euiText emotion-euiText-s-euiCard__description"
            id="generated-idDescription"
          >
            <p>
              this is a great tutorial about...
            </p>
          </div>
        </div>
        <span
          class="emotion-euiCard__betaBadgeAnchor"
        >
          <span
            class="euiBetaBadge emotion-euiBetaBadge-hollow-m-baseline-euiCard__betaBadge"
            id="generated-idBetaBadge"
            title="Beta"
          >
            Beta
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left"
        data-test-subj="homeSynopsisLinktutorial"
      >
        <div
          class="euiCard__main emotion-euiCard__main-horizontal"
        >
          <div
            class="euiCard__content emotion-euiCard__content-horizontal"
          >
            <h3
              class="euiTitle euiCard__title emotion-euiTitle-xs"
              id="generated-idTitle"
            >
              <a
                aria-describedby="generated-idDescription"
                class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
                href="link_to_item"
                rel="noreferrer"
              >
                Great tutorial
              </a>
            </h3>
            <div
              class="euiText emotion-euiText-s-euiCard__description"
              id="generated-idDescription"
            >
              <p>
                this is a great tutorial about...
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiCard homSynopsis__card emotion-euiPanel-grow-m-m-plain-hasShadow-isClickable-euiCard-left"
      data-test-subj="homeSynopsisLinktutorial"
    >
      <div
        class="euiCard__main emotion-euiCard__main-horizontal"
      >
        <div
          class="euiCard__content emotion-euiCard__content-horizontal"
        >
          <h3
            class="euiTitle euiCard__title emotion-euiTitle-xs"
            id="generated-idTitle"
          >
            <a
              aria-describedby="generated-idDescription"
              class="euiCard__titleAnchor emotion-euiCard__text-left-interactive"
              href="link_to_item"
              rel="noreferrer"
            >
              Great tutorial
            </a>
          </h3>
          <div
            class="euiText emotion-euiText-s-euiCard__description"
            id="generated-idDescription"
          >
            <p>
              this is a great tutorial about...
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
